updating hompage path

--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
                <nav>
                   <div class="menu">
                      <ul>
-                        <li><a href="homepage.html">Homepage</a></li>
+                        <li><a href="./">Homepage</a></li>
                         <li><a href="join-us.html">join us</a></li>
                         <li><a href="contact.html">contact</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
