--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                       
                       btn.addEventListener('click', function master(){
                           var master = document.getElementsByClassName("master2");
-                          master[2].innerHTML = 'What are you waiting for?! <a href="joinus.html">Click here </a>to join us now.' 
+                          master[2].innerHTML = 'What are you waiting for?! <a href="./join-us.html">Click here </a>to join us now.'
                       })
                
             </script>
