--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
    <head>
       <title>Contact</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <link rel="stylesheet" href="project-stylesheet.css"/>
+      <link rel="stylesheet" href="resources/styles/project-stylesheet.css"/>
       <!-- Font for small paragraphs -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <!-- Font for big headings -->
@@ -48,7 +48,7 @@
          <div class="col-sm-6">
             <!--Logo-->
             <div class="logo">
-               <img src="logo.png" alt="ping pong logo">
+               <img src="resources/img/logo.png" alt="ping pong logo">
             </div>
          </div>
       </div>
@@ -113,7 +113,7 @@
       <br>
       <!-- Social media icons -->
       <div id="theImages" >
-         <a href="#"><img src="social-media-buttons.png" class="social-buttons" /></a>
+         <a href="#"><img src="resources/img/social-media-buttons.png" class="social-buttons" /></a>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
    </body>
