--- a/gallery.html
+++ b/gallery.html
@@ -8,8 +8,8 @@
       <!-- Font for big headings -->
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Paytone+One&family=Shippori+Antique&display=swap" rel="stylesheet">
-      <script src="gallery.js"></script>
-      <link rel="stylesheet" href="project-stylesheet.css">
+      <script src="resources/js/gallery.js"></script>
+      <link rel="stylesheet" href="resources/styles/project-stylesheet.css">
       <meta charset="utf-8">
       <title></title>
    </head>
@@ -35,7 +35,7 @@
          <div class="col-sm-6">
             <!--Logo-->
             <div class="logo">
-               <img src="logo.png" alt="ping pong logo">
+               <img src="resources/img/logo.png" alt="ping pong logo">
             </div>
          </div>
       </div>
@@ -43,13 +43,13 @@
       <br>
       <div class = "gallery-box">
          <h2 id="texy">GALLERY</h2>
-         <img src="tt1.jpeg" height="228" width="228" onclick="showMsg(this)" msg="The Metaphysics of Ping-Pong <br> <br> 1 - Life is a ping pong ball. That is correct as well. If you don't believe me, roll yourself down the road and watch as your life spins round and round with each gust of wind. <br> source:[https://thebengali.com/2017/11/28/ping-pong-philosophy/]" >
-         <img src="tt2.jpeg" height="228" width="228" onclick="showMsg(this)" msg="The Metaphysics of Ping-Pong <br> <br> 2 - Spin is everything in table tennis. You may believe you are a powerful player because you can consistently belt the ball back and forth, but you will not get it. <br> source:[https://thebengali.com/2017/11/28/ping-pong-philosophy/]">
-         <img src="tt3.jpeg" height="228" width="228" onclick="showMsg(this)" msg="3 Core Table Tennis Serves <br> <br> 1 - We'll get things started with the chop serve. It is a simple serve to execute and is frequently the safest. Because the chop only transfers backspin, it is the easiest serve to keep short. This stops your opponent from exploiting loops. Furthermore, if you can generate high amounts of backspin, many players will be hesitant to play flick returns. This implies that you will be given a push return. <br> <br> source:[https://www.experttabletennis.com/3-table-tennis-serves-every-player-should-master/]">
+         <img src="resources/img/tt1.jpeg" height="228" width="228" onclick="showMsg(this)" msg="The Metaphysics of Ping-Pong <br> <br> 1 - Life is a ping pong ball. That is correct as well. If you don't believe me, roll yourself down the road and watch as your life spins round and round with each gust of wind. <br> source:[https://thebengali.com/2017/11/28/ping-pong-philosophy/]" >
+         <img src="resources/img/tt2.jpeg" height="228" width="228" onclick="showMsg(this)" msg="The Metaphysics of Ping-Pong <br> <br> 2 - Spin is everything in table tennis. You may believe you are a powerful player because you can consistently belt the ball back and forth, but you will not get it. <br> source:[https://thebengali.com/2017/11/28/ping-pong-philosophy/]">
+         <img src="resources/img/tt3.jpeg" height="228" width="228" onclick="showMsg(this)" msg="3 Core Table Tennis Serves <br> <br> 1 - We'll get things started with the chop serve. It is a simple serve to execute and is frequently the safest. Because the chop only transfers backspin, it is the easiest serve to keep short. This stops your opponent from exploiting loops. Furthermore, if you can generate high amounts of backspin, many players will be hesitant to play flick returns. This implies that you will be given a push return. <br> <br> source:[https://www.experttabletennis.com/3-table-tennis-serves-every-player-should-master/]">
          <br>
-         <img src="tt4.jpeg" height="228" width="228" onclick="showMsg(this)" msg="table tennis player 1">
-         <img src="tt5.jpeg" height="228" width="228" onclick="showMsg(this)" msg="table tennis player 2">
-         <img src="tt6.jpg" height="228" width="228" onclick="showMsg(this)" msg="table tennis player 3">
+         <img src="resources/img/tt4.jpeg" height="228" width="228" onclick="showMsg(this)" msg="table tennis player 1">
+         <img src="resources/img/tt5.jpeg" height="228" width="228" onclick="showMsg(this)" msg="table tennis player 2">
+         <img src="resources/img/tt6.jpg" height="228" width="228" onclick="showMsg(this)" msg="table tennis player 3">
          <div class="inner2" id="msg" style="display:none;"></div>
          <div class="inner2" id="msg" style="display:none;"></div>
       </div>
