--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <title>Homepage</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <link rel="stylesheet" href="project-stylesheet.css"/>
+      <link rel="stylesheet" href="resources/styles/project-stylesheet.css"/>
       <!-- Font for small paragraphs -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <!-- Font for big headings -->
@@ -31,7 +31,7 @@
          <div class="col-sm-6">
             <!--Logo-->
             <div class="logo">
-               <img src="logo.png" alt="ping pong logo">
+               <img src="resources/img/logo.png" alt="ping pong logo">
             </div>
          </div>
       </div>
@@ -67,7 +67,7 @@
       <div class="row">
          <div class="col-sm-6">
             <!-- Image of the ping pong player -->
-            <img src="player.png" alt="Ping pong player" class="our-story-image">
+            <img src="resources/img/player.png" alt="Ping pong player" class="our-story-image">
          </div>
          <div class="col-sm-6">
             <!-- Our story -->
