--- a/join-us.html
+++ b/join-us.html
@@ -3,7 +3,7 @@
    <head>
       <title>Join Us</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <link rel="stylesheet" href="project-stylesheet.css"/>
+      <link rel="stylesheet" href="resources/styles/project-stylesheet.css"/>
       <!-- Font for small paragraphs -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <!-- Font for big headings -->
@@ -49,7 +49,7 @@
          <div class="col-sm-6">
             <!--Logo-->
             <div class="logo">
-               <img src="logo.png" alt="ping pong logo">
+               <img src="resources/img/logo.png" alt="ping pong logo">
             </div>
          </div>
       </div>
