--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
          <div class="col-sm-6">
             <!--Logo-->
             <div class="logo">
-               <img src="resources/img/logo.png" alt="ping pong logo">
+               <img src="resources/img/logo.webp" alt="ping pong logo">
             </div>
          </div>
       </div>
@@ -113,7 +113,7 @@
       <br>
       <!-- Social media icons -->
       <div id="theImages" >
-         <a href="#"><img src="resources/img/social-media-buttons.png" class="social-buttons" /></a>
+         <a href="#"><img src="resources/img/social-media-buttons.webp" class="social-buttons" /></a>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
    </body>
