applying fixes based on validator report

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          <div class="col-sm-6">
             <!--Logo-->
             <div class="logo">
-               <img src="resources/img/logo.webp" alt="ping pong logo">
+               <img src="resources/img/logo.webp" alt="">
             </div>
          </div>
       </div>
@@ -67,7 +67,7 @@
       <div class="row">
          <div class="col-sm-6">
             <!-- Image of the ping pong player -->
-            <img src="resources/img/player.webp" alt="Ping pong player" class="our-story-image">
+            <img src="resources/img/player.webp" alt="" class="our-story-image">
          </div>
          <div class="col-sm-6">
             <!-- Our story -->
