--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
          <div class="col-sm-6">
             <!--Logo-->
             <div class="logo">
-               <img src="resources/img/logo.webp" alt="ping pong logo">
+               <img src="resources/img/logo.webp" alt="">
             </div>
          </div>
       </div>
