--- a/join-us.html
+++ b/join-us.html
@@ -49,7 +49,7 @@
          <div class="col-sm-6">
             <!--Logo-->
             <div class="logo">
-               <img src="resources/img/logo.webp" alt="ping pong logo">
+               <img src="resources/img/logo.webp" alt="">
             </div>
          </div>
       </div>
