--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
          }
          
       </script>
+      <meta charset="utf-8">
    </head>
    <body>
       <!-- Header Menu of the Page -->
