--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <!-- Font for big headings -->
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Paytone+One&family=Shippori+Antique&display=swap" rel="stylesheet">
+      <meta charset="utf-8">
    </head>
    <body>
       <!-- Header Menu of the Page -->
