--- a/join-us.html
+++ b/join-us.html
@@ -26,6 +26,7 @@
          }
          
       </script>
+      <meta charset="utf-8">
    </head>
    <body>
       <!-- Header Menu of the Page -->
