--- a/gallery.html
+++ b/gallery.html
@@ -11,6 +11,7 @@
       <script src="resources/js/gallery.js"></script>
       <link rel="stylesheet" href="resources/styles/project-stylesheet.css">
       <meta charset="utf-8">
+      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
    </head>
    <body>
       <!-- Header Menu of the Page -->
