--- a/join-us.html
+++ b/join-us.html
@@ -27,6 +27,7 @@
          
       </script>
       <meta charset="utf-8">
+      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
    </head>
    <body>
       <!-- Header Menu of the Page -->
