--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
          
       </script>
       <meta charset="utf-8">
-      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+      <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86">
    </head>
    <body>
       <!-- Header Menu of the Page -->
