--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
       <script src="resources/js/gallery.js"></script>
       <link rel="stylesheet" href="resources/styles/project-stylesheet.css">
       <meta charset="utf-8">
-      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+      <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86">
    </head>
    <body>
       <!-- Header Menu of the Page -->
