--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Paytone+One&family=Shippori+Antique&display=swap" rel="stylesheet">
       <meta charset="utf-8">
-      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+      <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86">
    </head>
    <body>
       <!-- Header Menu of the Page -->
