--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,16 @@
 <html lang="en" dir="ltr">
    <head>
       <title>Contact</title>
+      <!-- bootstrap -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <!-- website stylesheet -->
       <link rel="stylesheet" href="resources/styles/project-stylesheet.css"/>
       <!-- Font for small paragraphs -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <!-- Font for big headings -->
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Paytone+One&family=Shippori+Antique&display=swap" rel="stylesheet">
+      <!-- javascript for the contact form -->
       <script> 
          function formChecker(){
          	var checker = document.getElementById("input").value;
@@ -24,16 +27,15 @@
          		document.getElementById("reply").innerHTML = "Thank you, we received your message.";
          	}
          }
-         
+        
       </script>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=0">
    </head>
    <body>
-      <!-- Header Menu of the Page -->
+      <!-- Menu of the Page -->
       <div class="row">
          <div class="col-sm-6">
-            <!-- Header -->
             <div class="top-header">
                <nav>
                   <div class="menu">
@@ -54,12 +56,15 @@
             </div>
          </div>
       </div>
+      <!-- divider line -->
       <hr class="solid">
       <br>
       <div class="row">
          <div class="col-sm-6">
+            <!-- title -->
             <h1 class="send-us-a-message-title"> SEND US A MESSAGE </h1>
             <br>
+            <!-- paragraph -->
             <p class="send-us-a-message-paragraph" > Fill in the contact form on this page if you want to contact us. If you message us on weekdays, you will receive a reply on that same day - anytime from 9am to 5pm. Unfortunately, we don't reply to messages during the weekend. However, you can still message us during the weekend and we'll get back to you on Monday. </p>
          </div>
          <br>
@@ -105,18 +110,22 @@
             </div>
             <br>
             <div id="reply2">
-            <p id="reply" class="messageReply"> </p>
+               <!-- feedback -->
+               <p id="reply" class="messageReply"> </p>
             </div>
             </form>
          </div>
       </div>
+      <!-- divider line -->
       <hr class="solid">
+      <!-- title -->
       <h1> CLICK ON ANY OF OUR SOCIALS:</h1>
       <br>
       <!-- Social media icons -->
       <div id="theImages" >
          <a href="#"><img src="resources/img/social-media-buttons.webp" class="social-buttons" /></a>
       </div>
+      <!-- bootstrap -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
    </body>
 </html>
