--- a/gallery.html
+++ b/gallery.html
@@ -2,22 +2,24 @@
 <html lang="en" dir="ltr">
    <head>
       <title>Gallery</title>
+      <!-- bootsrap -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <!-- Font for small paragraphs -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <!-- Font for big headings -->
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Paytone+One&family=Shippori+Antique&display=swap" rel="stylesheet">
+      <!-- external javascript -->
       <script src="resources/js/gallery.js"></script>
+      <!-- website stylesheet -->
       <link rel="stylesheet" href="resources/styles/project-stylesheet.css">
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=0">
    </head>
    <body>
-      <!-- Header Menu of the Page -->
+      <!-- Menu of the Page -->
       <div class="row">
          <div class="col-sm-6">
-            <!-- Header -->
             <header>
             <div class="top-header">
                <nav>
@@ -39,8 +41,10 @@
             </div>
          </div>
       </div>
-      <hr class="solid">
+         <!-- divider -->
+         <hr class="solid">
       <br>
+      <!-- the gallery -->
       <div class = "gallery-box">
          <h2 id="texy">GALLERY</h2>
          <img src="resources/img/tt1.webp" height="228" width="228" onclick="showMsg(this)" msg="The Metaphysics of Ping-Pong <br> <br> 1 - Life is a ping pong ball. That is correct as well. If you don't believe me, roll yourself down the road and watch as your life spins round and round with each gust of wind. <br> source:[https://thebengali.com/2017/11/28/ping-pong-philosophy/]" >
@@ -52,6 +56,7 @@
          <img src="resources/img/tt6.webp" height="228" width="228" onclick="showMsg(this)" msg="table tennis player 3">
          <div class="inner2" id="msg" style="display:none;"></div>
       </div>
+      <!-- bootsrap -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
    </body>
 </html>
