--- a/join-us.html
+++ b/join-us.html
@@ -1,14 +1,19 @@
+<!-- Maxim wrote the codes for this page -->
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
    <head>
       <title>Join Us</title>
+      <!-- bootsrap -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <!-- website stylesheet -->
       <link rel="stylesheet" href="resources/styles/project-stylesheet.css"/>
       <!-- Font for small paragraphs -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <!-- Font for big headings -->
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Paytone+One&family=Shippori+Antique&display=swap" rel="stylesheet">
+      <!-- javascript for the form -->
       <script> 
          function theFormChecker(){
          	var checking = document.getElementById("inputs").value;
@@ -30,7 +35,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=0">
    </head>
    <body>
-      <!-- Header Menu of the Page -->
+      <!-- Menu of the Page -->
       <div class="row">
          <div class="col-sm-6">
             <!-- Header -->
@@ -55,12 +60,14 @@
             </div>
          </div>
       </div>
+      <!-- divider line -->
       <hr class="solid">
       <br>
       <div class="row">
          <div class="col-sm-6">
             <h1 class="joinUsTitle"> JOIN US </h1>
             <br>
+            <!-- paragraph -->
             <p class="send-us-a-message-paragraph" > Hey there! It would be very much appreciated if you can fill out the form on this page, so you can join the NCI table tennis club. Then we'll send you an email about everything you need to know in relation to our club. </p>
          </div>
          <br>
@@ -110,7 +117,8 @@
             </div>
             <br>
             <div id="reply7">
-            <p id="theReply" class="messageReply"> </p>
+               <!-- feedback -->
+               <p id="theReply" class="messageReply"> </p>
             </div>
             </form>
          </div>
@@ -118,6 +126,7 @@
       <br>
       <br>
       <br>
+      <!-- bootsrap -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
    </body>
 </html>
