comments have been added

--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,7 @@
+<!-- Abdullah wrote the codes for the "send us a message" title and paragraph -->
+<!-- Armughan wrote the codes for the contact form -->
+<!-- Maxim wrote the codes for the social media section of this page -->
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
    <head>
